--- a/2nd/index.html
+++ b/2nd/index.html
@@ -10,14 +10,14 @@
   <body>
       <header>
         <a href="#">메뉴></a>
-        <h1><a href="#">애플></a></h1>
+        <h1><a href="#">APPLE></a></h1>
         <!--
           h1 요소는 문서당 1개만 사용하는 것을 권장
         -->
         <a href="#">장바구니></a>
       </header>
       <main>
-        <section>
+        <section class="menu">
           <h2>메뉴</h2>
           <a href="#">iPhone 7</a>
           <a href="#">iPhone 6s</a>
