--- a/2nd/5th/index.html
+++ b/2nd/5th/index.html
@@ -32,7 +32,7 @@
     <header class="header">
       <div class="logo-area">
         <h1><a href="#">brunch</a></h1>
-        <a href="#">menu</a>
+        <button type="button">menu</button>
         <!--
           - 시각장애인은 h1인 brunch를 먼저보길 원할 것이다.
           - 디자인상 menu>brunch 순이지만 css로 조정가능하다.
@@ -46,54 +46,55 @@
       </div>
       <div class="tool-area">
         <a href="#" class="btn btn-normal">글쓰기</a>
-        <button type="button">검색</button>
+        <button type="button" class="btn btn-primary">검색</button>
       </div>
-    </header>
 
-    <!--
-      - Side Navigation
-      - 클래스명은 side-menu 혹은 side-nav 등...
-    -->
-    <nav class="side-nav">
-      <h2>메뉴</h2>
+
       <!--
-        - 접근성 측면에서 "메뉴"를 작성하는 것이 좋다.
-        - 로봇이 읽어갈 때 의미론적으로 분석하기 좋다.
-        - 언젠가 hidden 시키는 부분
+        - Side Navigation
+        - 클래스명은 side-menu 혹은 side-nav 등...
       -->
-      <div class="side-nav-header">
-        <a href="#" class="btn btn-primary">작가신청</a>
+      <nav class="side-nav side-nav-on">
+        <h2 class="blind">메뉴</h2>
         <!--
-          - 공통 디자인의 경우 클래스명을 부여할 떄 공통 모듈명을 작성하고
-          - 이후에 특성에 따라 분류를 세분화해서 클래스명을 부여한다.
+          - 접근성 측면에서 "메뉴"를 작성하는 것이 좋다.
+          - 로봇이 읽어갈 때 의미론적으로 분석하기 좋다.
+          - 언젠가 hidden 시키는 부분
         -->
-      </div>
-      <!--
-        - header를 사용해도 된다.
-        - 헤딩을 포함할 때는 header를 사용하고 아닐떈 div로 한다.
-      -->
-      <div class="side-nav-contents">
-        <div class="menus">
-          <a href="#">페북으로 시작하기</a>
-          <a href="#">트위터로 시작하기</a>
-          <a href="#">카카오로 시작하기</a>
-        </div>
-        <div class="etc">
-          <input type="checkbox" name="login-status" id="login">
+        <div class="side-nav-header">
+          <a href="#" class="btn btn-primary">작가신청</a>
           <!--
-            - id (identifier = 식별자)
-            - 같은 페이지에서 중복되어선 안돼
+            - 공통 디자인의 경우 클래스명을 부여할 떄 공통 모듈명을 작성하고
+            - 이후에 특성에 따라 분류를 세분화해서 클래스명을 부여한다.
           -->
-          <label for="login">로그인 상태 유지</label>
-          <!--
-            - label
-            - input은 label과 짝이다.
-            - label의 텍스트를 선택하면 체크상태가 변경된다.
-          -->
-          <a href="#">계정을 잊으셨나요?</a>
         </div>
-      </div>
-    </nav>
+        <!--
+          - header를 사용해도 된다.
+          - 헤딩을 포함할 때는 header를 사용하고 아닐떈 div로 한다.
+        -->
+        <div class="side-nav-contents">
+          <div class="menus">
+            <a href="#" class="lnk_facebook">페북으로 시작하기</a>
+            <a href="#" class="lnk_twitter">트위터로 시작하기</a>
+            <a href="#" class="lnk_kakao">카카오로 시작하기</a>
+          </div>
+          <div class="etc">
+            <input type="checkbox" name="login-status" id="login">
+            <!--
+              - id (identifier = 식별자)
+              - 같은 페이지에서 중복되어선 안돼
+            -->
+            <label for="login">로그인 상태 유지</label>
+            <!--
+              - label
+              - input은 label과 짝이다.
+              - label의 텍스트를 선택하면 체크상태가 변경된다.
+            -->
+            <a href="#">계정을 잊으셨나요?</a>
+          </div>
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
 
@@ -101,4 +102,5 @@
 <!--
   - 클래스 네이밍은 의미론적으로 다가가냐, 모듈로 다가가냐에 따라 다르다.
   - div자체에 CSS를 작성하지말아라 div {}
+  - CSS 작성, 네이밍 참고: https://github.com/CodeMakeBros/css-style-guide
 -->
